--- a/Legal/privacy-policy.html
+++ b/Legal/privacy-policy.html
@@ -7,25 +7,35 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lashae Glamour | Luxury Handmade Designs</title>
+    <title>Akarui | Lashaè Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/themify-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/themify-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+
+    <!-- Favicon image -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
+
     <!-- Header Section Begin -->
     <header class="header-section">
         <div class="header-top">
@@ -39,14 +49,14 @@
                 </div>
                 <div class="ht-right">
                     <div class="lan-selector">
-                        <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt"
-                                data-title="English">English</option>
-                        </select>
+                        <!-- <option> *Maybe add banner for discount code*</option> -->
                     </div>
                     <div class="top-social">
-                        <a href="#"><i class="ti-instagram"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                        <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
+                        <!-- <a href="#"><i class="ti-facebook"></i></a>
+                        <a href="#"><i class="ti-twitter-alt"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -56,12 +66,13 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                            <a href="../index.html">
+                                <img src="../img/logo.png" alt="">
                             </a>
                         </div>
                     </div>
 
+                    <!-- Button for SearchBar -->
                     <div class="col-lg-7 col-md-7">
                         <div id="my-search-60464127"></div>
                         <div>
@@ -69,6 +80,7 @@
                         <script type="text/javascript"> xSearch("id=my-search-60464127"); </script>
                         </div>
                     </div>
+                    <!-- Button for SearchBar -->
 
                     <div class="col-lg-3 text-right col-md-3">
                         <ul class="nav-right">
@@ -92,19 +104,19 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="./shop.html">Lashae Essentials</a></li>
+                            <li><a href="./shop.html">Lashaè Essentials</a></li>
                             <li><a href="./shop.html">LG Luxe</a></li>
-                            <li><a href="./shop.html">Bridal Nails</a></li>
+                            <li><a href="../bridal-nails.html">Bridal Nails</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
-                        <li><a href="./ReadyToShip.html">Ready to Ship</a></li>
-                        <li><a href="./MadeToOrder.html">Made to Order</a></li>
-                        <li><a href="CustomOrders.html">Custom Orders</a></li>
-                        <li><a href="./faq.html">FAQ</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="../ready-to-ship.html">Ready to Ship</a></li>
+                        <li><a href="../made-to-order.html">Made to Order</a></li>
+                        <li><a href="../custom-sets.html">Custom Sets</a></li>
+                        <li><a href="../faq.html">FAQ</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                             </ul>
                         </li>
                     </ul>
