--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
                         <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
+                            <div class="klaviyo-form-X67KvG"></div>
                         </form>
                     </div>
                 </div>
