--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
                         <ul>
                             <li><a href="./lsglm-story.html">Our Story</a></li>
                             <li><a href="./packaging.html">Packaging</li>
-                            <li><a href="./Legal_Docs/terms-of-use-policy.html">Terms of Use</a></li>
-                            <li><a href="./Legal_Docs/terms-of-sale-policy.html">Terms of Sale</a></li>
-                            <li><a href="./Legal_Docs/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                         <h5>Customer Service</h5>
                         <ul>
                             <li><a href="./contact.html">Contact Us</li>
-                            <li><a href="./Legal_Docs/covid-policy.html">Covid-19</a></li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
                             <li><a href="./faq.html">Delivery</a></li>
                             <li><a href="./faq.html">Returns</a></li>
