--- a/Legal/terms-of-sale-policy.html
+++ b/Legal/terms-of-sale-policy.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Akarui | Lashaè Glamour</title>
+    <title>Terms of Sale | Lashaè Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -389,11 +389,14 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
-                            <a href="#"><i class="ti-instagram"></i></a>
-                            <a href="#"><i class="fab fa-tiktok"></i></a>
+                            <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+                            <a href="http://www.pinterest.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-pinterest"></i></a>
+                            <!-- <a href="#"><i class="ti-facebook"></i></a>
+                            <a href="#"><i class="ti-twitter-alt"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -401,10 +404,11 @@
                     <div class="footer-widget">
                         <h5>About Us</h5>
                         <ul>
-                            <li><a href="#">Our Story</a></li>
-                            <li><a href="./contact.html">Packaging</li>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="./lsglm-story.html">Our Story</a></li>
+                            <li><a href="./packaging.html">Packaging</li>
+                            <li><a href="./Legal/terms-of-use-policy.html">Terms of Use</a></li>
+                            <li><a href="./Legal/terms-of-sale-policy.html">Terms of Sale</a></li>
+                            <li><a href="./Legal/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -412,11 +416,11 @@
                     <div class="footer-widget">
                         <h5>Customer Service</h5>
                         <ul>
-                            <li><a href="./contact.html">Contact</li>
-                            <li><a href="#">Covid-19</a></li>
+                            <li><a href="./contact.html">Contact Us</li>
+                            <li><a href="./Legal/covid-policy.html">Covid-19</a></li>
                             <li><a href="./faq.html">FAQ</a></li>
-                            <li><a href="#">Delivery</a></li>
-                            <li><a href="#">Returns</a></li>
+                            <li><a href="./faq.html">Delivery</a></li>
+                            <li><a href="./faq.html">Returns</a></li>
                         </ul>
                     </div>
                 </div>
@@ -424,10 +428,7 @@
                     <div class="newslatter-item">
                         <h5>Join our newsletter!</h5>
                         <p>Get E-mail updates about our latest nails and exclusive offers.</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form>
+                            <div class="klaviyo-form-X67KvG"></div>
                     </div>
                 </div>
             </div>
@@ -437,7 +438,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text">
-                            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashae Glamour
+                            Copyright &copy; <script>document.write(new Date().getFullYear());</script> Lashaè Glamour
                         </div>
                         <div class="payment-pic">
                             <img src="img/payment-method.png" alt="">
@@ -449,6 +450,9 @@
     </footer>
     <!-- Footer Section End -->
 
+    <!-- Klaviyo Plugins -->
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XTZXGN"></script>
+    
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
