--- a/Legal/cookies-policy.html
+++ b/Legal/cookies-policy.html
@@ -275,7 +275,7 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="./index.html"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
+                            <a href="./index.html"><img src="../img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
                             <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
